--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,6 +1,6 @@
 #serv-intro {
     background-image: url('/images/junk-pile.jpg');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     height: 30vmin;
     display: flex;
