--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    justify-content: flex-start;
     font-size: 2.5vmin;
     margin-top: auto;
     margin-bottom: 5vmin;
+}
+
+#footer p {
+    font-size: 2vmin;
 }
 
 #footer-btn {
