--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -9,3 +9,9 @@
     font-size: 7vmin;
     padding: 3vmin;
 }
+
+#contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
