--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -36,6 +36,7 @@
     padding: 2vmin;
     border-radius: 10px;
     font-family: 'Lato', sans-serif;
+    font-size: 2vmin;
 }
 
 #services-btn:hover {
