add phone image to footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,6 +22,7 @@
     padding: 2vmin;
     border-radius: 10px;
     font-family: 'Lato', sans-serif;
+    margin-bottom: 5vmin;
 }
 
 #footer-btn:hover {
