--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -31,3 +31,11 @@
     color: #fcfbf4;
 }
 
+@media (max-width: 767px) {
+    #footer p {
+        font-size: 4vmin;
+    }
+    #footer-btn {
+        font-size: 4vmin;
+    }
+}
