--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -15,3 +15,9 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 767px) {
+    #contact-intro h1{
+        font-size: 18vmin;
+    }
+}
