--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -23,3 +23,15 @@
     gap: 2vmin;
     font-size: 3vmin;
 }
+
+@media (max-width: 767px) {
+    #serv-intro h1{
+        font-size: 15vmin;
+    }
+    #services-list h2 {
+        font-size: 4.5vmin;
+    }
+    #list-container li {
+        font-size: 4vmin;
+    }
+}
