--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -15,6 +15,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    background-color: #ddddce;
 }
 
 #list-container ul {
