--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -10,29 +10,56 @@
     padding: 3vmin;
 }
 
-#list-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: #ddddce;
+hr {
+    border-top: 2px solid #8a0606;
+    width: 30vmin;
+    margin: 20px auto;
 }
 
-#list-container ul {
+#slogan {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 3vmin 0;
+}
+
+#slogan div {
     display: flex;
     flex-direction: column;
-    gap: 2vmin;
+    align-items: center;
+}
+
+#slogan h2 {
+    padding: 0;
+    margin: 0;
+    color: #8a0606;
+}
+
+#services-lists {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#services-lists h3 {
     font-size: 3vmin;
+}
+
+#services-lists img {
+    width: 25vmin;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px grey;
+}
+
+.landlord-list, .comm-list, .res-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vmin;
 }
 
 @media (max-width: 767px) {
     #serv-intro h1{
         font-size: 15vmin;
-    }
-    #services-list h2 {
-        font-size: 4.5vmin;
-    }
-    #list-container li {
-        font-size: 4vmin;
     }
 }
