contact page update

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -24,6 +24,7 @@
     border-radius: 10px;
     font-family: 'Lato', sans-serif;
     margin-bottom: 5vmin;
+    font-weight: bold;
 }
 
 #footer-btn:hover {
