--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -38,3 +38,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 767px) {
+    #form {
+        display: flex;
+        flex-direction: column;
+        gap: 5vmin;
+    }
+}
